# AoC

2024/: LICENSE  aoc.cabal  flake.nix
2024/lib/DayFour/: A.hs  B.hs
2024/lib/DayOne/: A.hs  B.hs
2024/lib/DayThree/: A.hs  B.hs
2024/lib/DayTwo/: A.hs  B.hs
2024/lib/Lib/: Parser.hs
2024/test/: DayFourSpec.hs  DayOneSpec.hs  DayThreeSpec.hs  DayTwoSpec.hs
